<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@color/green">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/element_number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/element_1"
                android:layout_marginLeft="8dp"/>

            <Button
                android:id="@+id/element_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/element_button"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp"
                android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_2"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/element_number_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/element_3" />

                <Button
                    android:id="@+id/element_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_4"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_5"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_6"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_7"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_8"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@color/green">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_9"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_10"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/element_number_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/element_11" />

                <Button
                    android:id="@+id/element_button_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_12"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_13"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_14"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/element_number_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_15"
                    android:layout_marginLeft="8dp"/>

                <Button
                    android:id="@+id/element_button_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>